.provarCaches/00D1q0000008b5bEAA/objects/xcdhcm__CustomURL__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Controls links from custom buttons - e.g., Performance Review, HR Request</description>
    <fields>
        <fullName>xcdhcm__CustomURL_Value__c</fullName>
        <label>CustomURL_Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Custom_Button_Name__c</fullName>
        <description>Rename filed label from CustomButtonName to &quot;Custom value&quot;  as part of NPPD-1841.
Use this field to input the ID values</description>
        <label>Custom value</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <label>CustomURL</label>
    <listViews>
        <fullName>Custom_URL</fullName>
        <columns>NAME</columns>
        <columns>xcdhcm__Description__c</columns>
        <columns>xcdhcm__Custom_Button_Name__c</columns>
        <columns>xcdhcm__CustomURL_Value__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Custom URL</label>
        <language>en_GB</language>
        <sharedTo>
            <group>HR_Administrator</group>
        </sharedTo>
    </listViews>
</CustomObject>